pixel perfect corrections

--- a/form.html
+++ b/form.html
@@ -23,7 +23,7 @@
           </a>
         </nav>
         <div class="main-header__promo-view promo__view">
-        <div class="promo-view__slogan-layout">
+        <div class="promo-view__slogan-layout promo-view__slogan-layout--lower">
           <img class="promo-view__logo-title" src="img/text-sedona.svg" alt="Sedona" width="280" height="47">
         </div>
       </div>
@@ -50,7 +50,7 @@
                 <input class="person__input" type="text" placeholder="Иванов" name="name-mid">
               </label>
               <label class="person__label">
-                <span class="person__label-text">Отчество</span>
+                <span class="person__label-text">Отчество: </span>
                 <input class="person__input" type="text" placeholder="Александрович" name="name-last">
               </label>
             </div>
@@ -116,7 +116,7 @@
         <div class="form__emotions emotions">
           <div class="emotions__wrap">
             <h2 class="emotions__title">Опишите свои эмоции:</h2>
-            <textarea class="emotions__text" name="textarea" cols="30" rows="10" placeholder="Опишите подробно свои восторги"></textarea>
+            <textarea class="emotions__text" name="textarea" cols="30" rows="10" placeholder="Опишите подробно все свои восторги"></textarea>
           </div>
         </div>
         <button class="form__btn" type="submit">Отправить отзыв</button>
@@ -133,7 +133,7 @@
           </div>
         </div>
         <div class="main-footer__copyright-wrap">
-          <p class="main-footer__copyright">Разаботано</p>
+          <p class="main-footer__copyright">Разработано</p>
           <a class="main-footer__copyright-img-layout" href="https://htmlacademy.ru">
             <img class="main-footer__copyright-img" src="img/logo-htmlacademy.svg" width="27" height="34" alt="HTMLAcademy">
           </a>
