--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
           </a>
         </nav>
         <div class="main-header__promo-view promo__view">
-        <div class="promo-view__slogan-layout">
+        <div class="promo-view__slogan-layout promo-view__slogan-layout--higher">
           <img class="promo-view__logo-title" src="img/text-sedona.svg" alt="Sedona" width="280" height="47">
         </div>
       </div>
@@ -31,7 +31,7 @@
     </header>
     <div class="main-title">
       <div class="main-title__wrap">
-        <h1 class="main-title__title">Седона — небольшой городок в Аризоне, заслуживающий большего!</h1>
+        <h1 class="main-title__title">Седона – небольшой городок в Аризоне, заслуживающий большего!</h1>
         <p class="main-title__reason">Рассмотрим 5 причин, по которым седона круче чем гранд каньон!</p>
       </div>
     </div>
@@ -41,8 +41,8 @@
           <div class="features-place__head-layout">
             <header class="features-place__head">
             <h2 class="features-place__title">Настоящий городок</h2>
-            <span class="features-place__number-features">- №1 -</span>
-            <p class="features-place__about-features">Седона не атракцион для туристов, там течет своя жизнь</p>
+            <span class="features-place__number-features">– №1 –</span>
+            <p class="features-place__about-features">Седона не аттракцион для туристов, там течет своя жизнь</p>
           </header>
           </div>
           <div class="features-place__image-layout">City</div>
@@ -54,7 +54,7 @@
         </div>
         <div class="features-place__entertainment-item-layout">
           <h3 class="features-place__entertainment-item-title">Сувениры</h3>
-          <p class="features-place__entertainment-item-about">Не только китайкого, но и местного производства!</p>
+          <p class="features-place__entertainment-item-about">Не только китайcкого, но и местного производства!</p>
         </div>
         <div class="features-place__entertainment-item-layout">
           <h3 class="features-place__entertainment-item-title">Еда</h3>
@@ -67,9 +67,9 @@
       <div class="features-bridge-wrap">
         <div class="features-bridge__background">
           <div class="features-bridge__head">
-            <h2 class="features-bridge__title">Там есть мост дьявола</h2>
-            <span class="features-bridge__number-features">- №2 -</span>
-            <p class="features-bridge__about-features">Да, по нему можно пройти! Если вы осмелитесь, конечно</p>
+            <h2 class="features-bridge__title"> Там есть мост дьявола</h2>
+            <span class="features-bridge__number-features">– №2 –</span>
+            <p class="features-bridge__about-features">Да, по нему можно пройти! Если вы осмелитесь, конечно </p>
           </div>
         </div>
         <div class="features-bridge__picture-layout">Каньон</div>
@@ -79,17 +79,17 @@
       <div class="features-other__wrap">
         <div class="features-other__layout">
           <h2 class="features-other__title">Небольшая площадь</h2>
-          <span class="features-other__number-features">- №3 -</span>
-          <p class="features-other__about-features">Все достопримечательности находятся очень близко</p>
+          <span class="features-other__number-features">– №3 –</span>
+          <p class="features-other__about-features">Все достопримеча&shyтельности находятся очень близко</p>
         </div>
         <div class="features-other__layout">
-          <h2 class="features-other__title">Красива дорога</h2>
-          <span class="features-other__number-features">- №4 -</span>
+          <h2 class="features-other__title">Красивая дорога</h2>
+          <span class="features-other__number-features">– №4 –</span>
           <p class="features-other__about-features">Ехать в седону из Лас-Вегаса совсем не скучно!</p>
         </div>
         <div class="features-other__layout">
           <h2 class="features-other__title">Мало туристов</h2>
-          <span class="features-other__number-features">- №5 -</span>
+          <span class="features-other__number-features">– №5 –</span>
           <p class="features-other__about-features">Большинство едет в гранд каньон и толпится там</p>
         </div>
       </div>
@@ -97,7 +97,7 @@
     <section class="location">
       <div class="location__wrap">
         <h2 class="location__title">Заинтересовались?</h2>
-        <p class="location__about">Укажите предпологаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в седоне</p>
+        <p class="location__about">Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в седоне</p>
         <button class="location__button" type="button">Найти гостиницу</button>
       </div>
     </section>
@@ -115,7 +115,7 @@
           </div>
         </div>
         <div class="main-footer__copyright-wrap">
-          <p class="main-footer__copyright">Разаботано</p>
+          <p class="main-footer__copyright">Разработано</p>
           <a class="main-footer__copyright-img-layout" href="https://htmlacademy.ru">
             <img class="main-footer__copyright-img" src="img/logo-htmlacademy.svg" width="27" height="34" alt="HTMLAcademy">
           </a>
