--- a/photo.html
+++ b/photo.html
@@ -23,7 +23,7 @@
           </a>
         </nav>
         <div class="main-header__promo-view promo__view">
-        <div class="promo-view__slogan-layout">
+        <div class="promo-view__slogan-layout promo-view__slogan-layout--lower">
           <img class="promo-view__logo-title" src="img/text-sedona.svg" alt="Sedona" width="280" height="47">
         </div>
       </div>
@@ -82,7 +82,7 @@
         <section class="media__video video">
           <div class="video__text-wrap">
             <h2 class="video__title">Все еще сомневаетесь?</h2>
-            <p class="video__about">Смотрите видеопрезентацию и скорееза билетами, пока они не подорожали в очередной раз!</p>
+            <p class="video__about">Смотрите видеопрезентацию и скорее за билетами, пока они не подорожали в очередной раз!</p>
           </div>
           <div class="video__video-player">
             <div class="video__remote-layout">
@@ -110,7 +110,7 @@
           </div>
         </div>
         <div class="main-footer__copyright-wrap">
-          <p class="main-footer__copyright">Разаботано</p>
+          <p class="main-footer__copyright">Разработано</p>
           <a class="main-footer__copyright-img-layout" href="https://htmlacademy.ru">
             <img class="main-footer__copyright-img" src="img/logo-htmlacademy.svg" width="27" height="34" alt="HTMLAcademy">
           </a>
