pixel-perfect final

--- a/form.html
+++ b/form.html
@@ -61,7 +61,7 @@
             <h2 class="contact-inf__title">Контактная информация:</h2>
             <div class="contact-inf__label-wrap">
               <label class="contact-inf__label">
-                <span class="contact-inf__label-text">Контактный телефон*:</span>
+                <span class="contact-inf__label-text"><span class="contact-inf__label-text-hidden">Контактный</span> телефон*:</span>
                 <input class="contact-inf__input" type="text" placeholder="Введите телефон" name="tel">
               </label>
               <label class="contact-inf__label">
@@ -123,9 +123,9 @@
       </div>
     </form>
     <footer class="main-footer">
-      <div class="main-footer__wrap">
+      <div class="main-footer__wrap main-footer__wrap--form">
         <p class="main-footer__hash">#visitsedona</p>
-        <div class="main-footer__socials socials">
+        <div class="main-footer__socials main-footer__socials--form socials">
           <div class="socials__wrap">
             <a class="socials__link" href="#">Twit</a>
             <a class="socials__link" href="#">FB</a>
