module5 task finish

--- a/form.html
+++ b/form.html
@@ -140,5 +140,21 @@
         </div>
       </div>
     </footer>
+    <section class="popup-success popup-success--close">
+      <div class="popup-success__wrap">
+        <h2 class="popup-success__title">Ваш отзыв отправлен!</h2>
+        <p class="popup-success__text">Спасибо за ваше участие, ваш отзыв уже поступил к нам. В ближайшее время мы опубликуем его на сайте.</p>
+        <div class="popup-success__btn-wrap">
+          <button class="popup-success__btn" type="button">закрыть окно</button>
+        </div>
+      </div>
+    </section>
+    <section class="popup-falure popup-falure--close">
+      <div class="popup-falure__wrap">
+        <h2 class="popup-falure__title">Что-то пошло не так!</h2>
+        <p class="popup-falure__text">Проверьте поля, выделенные красным, скорее всего вы забыли их заполнить</p>
+        <button class="popup-falure__btn" type="button">ок</button>
+      </div>
+    </section>
   </body>
 </html>
