--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
         <div class="features-other__layout">
           <h2 class="features-other__title">Небольшая площадь</h2>
           <span class="features-other__number-features">– №3 –</span>
-          <p class="features-other__about-features">Все достопримеча&shyтельности находятся очень близко</p>
+          <p class="features-other__about-features">Все достопримеча&shy;тельности находятся очень близко</p>
         </div>
         <div class="features-other__layout">
           <h2 class="features-other__title">Красивая дорога</h2>
