--- a/photo.html
+++ b/photo.html
@@ -18,7 +18,7 @@
             <li class="main-header__item"><a class="main-header__item-link" href="#">HTML Academy</a></li>
           </ul>
           <button class="main-header__toggle" type="button">Закрыть</button>
-          <a class="main-header__logo-wrap">
+          <a class="main-header__logo-wrap" href="index.html">
             <img class="main-header__logo" src="img/logo-sedona-mobile.svg" alt="City Sedona" width="102" height="83">
           </a>
         </nav>
