rastr retina and svg

--- a/photo.html
+++ b/photo.html
@@ -13,7 +13,7 @@
         <nav class="main-header__navigation main-header__navigation--opened">
           <ul class="main-header__list">
             <li class="main-header__item"><a class="main-header__item-link" href="index.html">Главная</a></li>
-            <li class="main-header__item"><a class="main-header__item-link">Фото и видео</a></li>
+            <li class="main-header__item"><a class="main-header__item-link main-header__item-link--active">Фото и видео</a></li>
             <li class="main-header__item"><a class="main-header__item-link" href="form.html">Форма отзыва</a></li>
             <li class="main-header__item"><a class="main-header__item-link" href="#">HTML Academy</a></li>
           </ul>
@@ -23,9 +23,9 @@
           </a>
         </nav>
         <div class="main-header__promo-view promo__view">
-        <div class="promo-view__slogan-layout promo-view__slogan-layout--lower">
-          <img class="promo-view__logo-title" src="img/text-sedona.svg" alt="Sedona" width="280" height="47">
-        </div>
+          <div class="promo-view__slogan-layout promo-view__slogan-layout--lower">
+            <img class="promo-view__logo-title" src="img/text-sedona.svg" alt="Sedona" width="280" height="47">
+          </div>
       </div>
       </div>
     </header>
