--- a/form.html
+++ b/form.html
@@ -14,7 +14,7 @@
           <ul class="main-header__list">
             <li class="main-header__item"><a class="main-header__item-link" href="index.html">Главная</a></li>
             <li class="main-header__item"><a class="main-header__item-link" href="photo.html">Фото и видео</a></li>
-            <li class="main-header__item"><a class="main-header__item-link">Форма отзыва</a></li>
+            <li class="main-header__item"><a class="main-header__item-link main-header__item-link--active">Форма отзыва</a></li>
             <li class="main-header__item"><a class="main-header__item-link" href="#">HTML Academy</a></li>
           </ul>
           <button class="main-header__toggle" type="button">Закрыть</button>
