--- a/index.html
+++ b/index.html
@@ -12,20 +12,22 @@
       <div class="main-header__wrap">
         <nav class="main-header__navigation main-header__navigation--opened">
           <ul class="main-header__list">
-            <li class="main-header__item"><a class="main-header__item-link">Главная</a></li>
+            <li class="main-header__item"><a class="main-header__item-link main-header__item-link--active">Главная</a></li>
             <li class="main-header__item"><a class="main-header__item-link" href="photo.html">Фото и видео</a></li>
             <li class="main-header__item"><a class="main-header__item-link" href="form.html">Форма отзыва</a></li>
             <li class="main-header__item"><a class="main-header__item-link" href="#">HTML Academy</a></li>
           </ul>
           <button class="main-header__toggle" type="button">Закрыть</button>
           <a class="main-header__logo-wrap">
-            <img class="main-header__logo" src="img/logo-sedona-mobile.svg" alt="City Sedona" width="102" height="83">
+            <picture>
+              <source media="(min-width: 768px)">
+              <img class="main-header__logo" src="img/logo-sedona-mobile.svg" alt="City Sedona" width="102" height="83">
           </a>
         </nav>
         <div class="main-header__promo-view promo__view">
-        <div class="promo-view__slogan-layout promo-view__slogan-layout--higher">
-          <img class="promo-view__logo-title" src="img/text-sedona.svg" alt="Sedona" width="280" height="47">
-        </div>
+          <div class="promo-view__slogan-layout">
+            <img class="promo-view__logo-title" src="img/text-sedona.svg" alt="Sedona" width="280" height="47">
+          </div>
       </div>
       </div>
     </header>
@@ -45,7 +47,13 @@
             <p class="features-place__about-features">Седона не аттракцион для туристов, там течет своя жизнь</p>
           </header>
           </div>
-          <div class="features-place__image-layout">City</div>
+          <div class="features-place__image-layout">
+            <picture>
+              <source media="(min-width: 1200px)" srcset="img/photo-city@1x.jpg 1x, img/photo-city@2x.jpg 2x">
+              <source media="(min-width: 768px)" srcset="img/photo-city-tablet@1x.jpg 1x, img/photo-city-tablet@2x.jpg 2x">
+              <img src="img/photo-city-mobile@1x.jpg" srcset="img/photo-city-mobile@2x.jpg 2x" alt="City">
+            </picture>
+          </div>
         </div>
         <div class="features-place__entertainment">
         <div class="features-place__entertainment-item-layout">
@@ -72,7 +80,13 @@
             <p class="features-bridge__about-features">Да, по нему можно пройти! Если вы осмелитесь, конечно </p>
           </div>
         </div>
-        <div class="features-bridge__picture-layout">Каньон</div>
+        <div class="features-bridge__picture-layout">
+          <picture>
+            <source media="(min-width: 1200px)" srcset="img/photo-bridge@1x.jpg 1x, img/photo-bridge@2x.jpg 2x">
+            <source media="(min-width: 768px)" srcset="img/photo-bridge-tablet@1x.jpg 1x, img/photo-bridge-tablet@2x.jpg 2x">
+            <img src="img/photo-bridge-mobile@1x.jpg" srcset="img/photo-bridge-mobile@2x.jpg 2x" alt="Каньон">
+          </picture>
+        </div>
       </div>
     </section>
     <section class="features-other">
