--- a/index.html
+++ b/index.html
@@ -20,13 +20,15 @@
           <button class="main-header__toggle" type="button">Закрыть</button>
           <a class="main-header__logo-wrap">
             <picture>
-              <source media="(min-width: 768px)">
+              <source media="(min-width: 1200px)" srcset="img/logo-sedona-desktop.svg">
+              <source media="(min-width: 768px)" srcset="img/logo-sedona-tablet.svg">
               <img class="main-header__logo" src="img/logo-sedona-mobile.svg" alt="City Sedona" width="102" height="83">
+            </picture>
           </a>
         </nav>
         <div class="main-header__promo-view promo__view">
           <div class="promo-view__slogan-layout">
-            <img class="promo-view__logo-title" src="img/text-sedona.svg" alt="Sedona" width="280" height="47">
+            <img class="promo-view__logo-title promo-view__logo-title--index" src="img/text-sedona-index.svg" alt="Sedona" width="282" height="214">
           </div>
       </div>
       </div>
