svg index and photo

--- a/form.html
+++ b/form.html
@@ -127,19 +127,25 @@
       </div>
     </form>
     <footer class="main-footer">
-      <div class="main-footer__wrap main-footer__wrap--form">
+      <div class="main-footer__wrap">
         <p class="main-footer__hash">#visitsedona</p>
-        <div class="main-footer__socials main-footer__socials--form socials">
+        <div class="main-footer__socials socials">
           <div class="socials__wrap">
-            <a class="socials__link" href="#">Twit</a>
-            <a class="socials__link" href="#">FB</a>
-            <a class="socials__link" href="#">Youtube</a>
+            <a class="socials__link" href="#">Twit
+              <svg class="socials__link-icon" width="18" height="14"><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#icon-twitter"></use></svg>
+            </a>
+            <a class="socials__link" href="#">FB
+              <svg class="socials__link-icon" width="9" height="18"><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#icon-facebook"></use></svg>
+            </a>
+            <a class="socials__link" href="#">Youtube
+              <svg class="socials__link-icon" width="20" height="14"><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#icon-youtube"></use></svg>
+            </a>
           </div>
         </div>
         <div class="main-footer__copyright-wrap">
           <p class="main-footer__copyright">Разработано</p>
           <a class="main-footer__copyright-img-layout" href="https://htmlacademy.ru">
-            <img class="main-footer__copyright-img" src="img/logo-htmlacademy.svg" width="27" height="34" alt="HTMLAcademy">
+            <svg class="main-footer__copyright-img" width="27" height="37"><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#logo-htmlacademy"></use></svg>
           </a>
         </div>
       </div>
