--- a/photo.html
+++ b/photo.html
@@ -136,9 +136,15 @@
               </div>
             </div>
             <div class="video__userbar-layout">
-              <button class="video__replay" type="button">Видео сначала</button>
-              <button class="video__subtitle" type="button">Субтитры</button>
-              <button class="video__full-screan" type="button">Полный экран</button>
+              <button class="video__replay" type="button">Видео сначала
+                <svg class="video__replay-icon" width="16" height="20"><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#icon-video-replay"></use></svg>
+              </button>
+              <button class="video__subtitle" type="button">Субтитры
+                <svg class="video__subtitle-icon" width="32" height="20"><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#icon-video-subtitles"></use></svg>
+              </button>
+              <button class="video__full-screan" type="button">Полный экран
+                <svg class="video__full-screan-icon" width="20" height="20"><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#icon-video-fullscreen"></use></svg>
+              </button>
             </div>
           </div>
         </section>
