--- a/form.html
+++ b/form.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="css/style.css">
   </head>
   <body class="form-page">
-    <svg style="display:none"><symbol viewBox="0 0 8.672 18.944" id="icon-facebook"><path d="M6.275 3.356h2.398V0H5.795C2.656.181 1.54 2.387 1.948 6.114H0v3.518h1.959v9.312h3.837V9.632h2.857V6.114H5.787c-.022-1.045-.037-2.405.488-2.758z"/></symbol><symbol viewBox="0 0 17.5 14.663" id="icon-twitter"><path fill-rule="evenodd" clip-rule="evenodd" d="M11.283.153c1.736-.484 3.074.264 3.685 1.15.694-.225 1.372-.47 2.072-.69-.004.841-.538 1.478-.883 1.728.704.165 1.343-.481 1.343-.481-.175.977-1.035 1.746-1.611 1.977-.239 6.592-3.272 10.956-10.382 10.823h-.46c-.422 0-4.29-.45-5.047-1.843 2.341.192 4.011-.412 4.835-1.15-.989-.293-2.761-.464-3.07-2.881.362.105.583.223 1.228.117C1.757 8.067.385 7.366.461 5.218c.294.319 1.1.523 1.381.461C1.117 5.444-.188 2.398.921.843 2.794 2.655 4.769 4.364 8.29 4.528c.216-2.24 1.171-3.74 2.993-4.375z"/></symbol><symbol viewBox="0 0 19.979 14.015" id="icon-youtube"><path d="M17.145 0H2.835A2.842 2.842 0 0 0 0 2.835v8.345a2.842 2.842 0 0 0 2.835 2.835h14.31a2.842 2.842 0 0 0 2.835-2.835V2.835A2.844 2.844 0 0 0 17.145 0zM7.036 10.392V3.623l6.769 3.384-6.769 3.385z"/></symbol><symbol viewBox="0 0 26.943 34.09" id="logo-htmlacademy"><path d="M13.62.017L13.472 0 0 1.412v24.661l13.473 8.017 13.43-7.99.042-.025V1.412L13.62.017zm11.399 12.11L13.495 5.334l-.001-.104-.087.05-.088-.056v.109L1.925 12.118V3.147l11.548-1.212L25.02 3.147v8.98zm-11.614-5.34L24.923 13.5l-4.479 2.64-7.093-4.221-.014 1.415 5.904 3.513-.86.507-5.03-2.992-.014 1.415 3.827 2.275-.782.523-3.031-1.787-.014 1.413 1.853 1.091-1.8 1.081-11.356-6.751 11.371-6.835zm-11.48 8.34l11.411 6.791.016 1.044-7.942-4.728-.015 1.416 7.979 4.795.018 1.076-7.973-4.74-.013 1.414 8.021 4.822.046.025 8.143-4.872-.011-5.177 3.415-2.036v10.021L13.472 31.85 1.925 24.979v-9.852z"/></symbol></svg>
+    <svg style="display:none"><symbol viewBox="0 0 1199.91 57" id="bg-intro-triangle-desktop"><path d="M250.08 23.71L.514 0v57h599.955L250.08 0zm700.779 0V0l-350.39 57h599.955V0z"/></symbol><symbol viewBox="440.469 30.889 320 26.111" id="bg-intro-triangle-mobile" preserveAspectRatio="none"><path d="M760.469 57V30.889L599.955 57zm-320 0h159.486L440.469 31.056z"/></symbol><symbol viewBox="216.469 0 768 57" id="bg-intro-triangle-tablet" preserveAspectRatio="none"><path d="M249.566 23.71l-33.097-3.145V57h383.486L249.566 0zm700.78 0V0L599.955 57h384.514V20.468z"/></symbol><symbol viewBox="0 12.452 320 37" id="bg-triangle" preserveAspectRatio="none"><path d="M320 12.452H0v21.723l160 15.277 160-15.277z"/></symbol><symbol viewBox="0 0 8.672 18.944" id="icon-facebook"><path d="M6.275 3.356h2.398V0H5.795C2.656.181 1.54 2.387 1.948 6.114H0v3.518h1.959v9.312h3.837V9.632h2.857V6.114H5.787c-.022-1.045-.037-2.405.488-2.758z"/></symbol><symbol viewBox="0 0 17.5 14.663" id="icon-twitter"><path fill-rule="evenodd" clip-rule="evenodd" d="M11.283.153c1.736-.484 3.074.264 3.685 1.15.694-.225 1.372-.47 2.072-.69-.004.841-.538 1.478-.883 1.728.704.165 1.343-.481 1.343-.481-.175.977-1.035 1.746-1.611 1.977-.239 6.592-3.272 10.956-10.382 10.823h-.46c-.422 0-4.29-.45-5.047-1.843 2.341.192 4.011-.412 4.835-1.15-.989-.293-2.761-.464-3.07-2.881.362.105.583.223 1.228.117C1.757 8.067.385 7.366.461 5.218c.294.319 1.1.523 1.381.461C1.117 5.444-.188 2.398.921.843 2.794 2.655 4.769 4.364 8.29 4.528c.216-2.24 1.171-3.74 2.993-4.375z"/></symbol><symbol viewBox="0 0 19.979 14.015" id="icon-youtube"><path d="M17.145 0H2.835A2.842 2.842 0 0 0 0 2.835v8.345a2.842 2.842 0 0 0 2.835 2.835h14.31a2.842 2.842 0 0 0 2.835-2.835V2.835A2.844 2.844 0 0 0 17.145 0zM7.036 10.392V3.623l6.769 3.384-6.769 3.385z"/></symbol><symbol viewBox="0 0 26.943 34.09" id="logo-htmlacademy"><path d="M13.62.017L13.472 0 0 1.412v24.661l13.473 8.017 13.43-7.99.042-.025V1.412L13.62.017zm11.399 12.11L13.495 5.334l-.001-.104-.087.05-.088-.056v.109L1.925 12.118V3.147l11.548-1.212L25.02 3.147v8.98zm-11.614-5.34L24.923 13.5l-4.479 2.64-7.093-4.221-.014 1.415 5.904 3.513-.86.507-5.03-2.992-.014 1.415 3.827 2.275-.782.523-3.031-1.787-.014 1.413 1.853 1.091-1.8 1.081-11.356-6.751 11.371-6.835zm-11.48 8.34l11.411 6.791.016 1.044-7.942-4.728-.015 1.416 7.979 4.795.018 1.076-7.973-4.74-.013 1.414 8.021 4.822.046.025 8.143-4.872-.011-5.177 3.415-2.036v10.021L13.472 31.85 1.925 24.979v-9.852z"/></symbol></svg>
     <header class="main-header">
       <div class="main-header__wrap">
         <nav class="main-header__navigation main-header__navigation--opened">
@@ -30,6 +30,9 @@
         <div class="main-header__promo-view promo__view">
         <div class="promo-view__slogan-layout promo-view__slogan-layout--lower">
           <img class="promo-view__logo-title" src="img/text-sedona.svg" alt="Sedona" width="280" height="47">
+          <svg class="promo-view__triangle-mobile" width="100%" height="26"><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#bg-intro-triangle-mobile"></use></svg>
+          <svg class="promo-view__triangle-tablet" width="100%" height="57"><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#bg-intro-triangle-tablet"></use></svg>
+          <svg class="promo-view__triangle-desktop" width="1201" height="57"><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#bg-intro-triangle-desktop"></use></svg>
         </div>
       </div>
       </div>
@@ -67,11 +70,15 @@
             <div class="contact-inf__label-wrap">
               <label class="contact-inf__label">
                 <span class="contact-inf__label-text"><span class="contact-inf__label-text-hidden">Контактный</span> телефон*:</span>
-                <input class="contact-inf__input" type="text" placeholder="Введите телефон" name="tel">
+                <div class="contact-inf__input-wrap">
+                  <input class="contact-inf__input" type="text" placeholder="Введите телефон" name="tel">
+                </div>
               </label>
               <label class="contact-inf__label">
                 <span class="contact-inf__label-text">Электронная почта*:</span>
-                <input class="contact-inf__input" type="email" placeholder="Введите e-mail" name="email" required>
+                <div class="contact-inf__input-wrap">
+                  <input class="contact-inf__input" type="email" placeholder="Введите e-mail" name="email">
+                </div>
               </label>
             </div>
           </div>
@@ -128,9 +135,9 @@
       </div>
     </form>
     <footer class="main-footer">
-      <div class="main-footer__wrap">
+      <div class="main-footer__wrap main-footer__wrap--form">
         <p class="main-footer__hash">#visitsedona</p>
-        <div class="main-footer__socials socials">
+        <div class="main-footer__socials main-footer__socials--form socials">
           <div class="socials__wrap">
             <a class="socials__link" href="#">Twit
               <svg class="socials__link-icon" width="18" height="14"><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#icon-twitter"></use></svg>
@@ -167,5 +174,7 @@
         <button class="popup-falure__btn" type="button">ок</button>
       </div>
     </section>
+    <script type="text/javascript" src="js/navigation.js"></script>
+    <script type="text/javascript" src="js/popup.js"></script>
   </body>
 </html>
