--- a/index.html
+++ b/index.html
@@ -119,11 +119,13 @@
       <div class="location__wrap">
         <h2 class="location__title">Заинтересовались?</h2>
         <p class="location__about">Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в седоне</p>
-        <button class="location__button" type="button">Найти гостиницу</button>
+        <a class="location__button" href="http://examplepage.com">Найти гостиницу</a>
       </div>
     </section>
     <div class="map">
-      <div class="map__layout"></div>
+      <div class="map__layout">
+        <iframe class="map__google-sedona" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d592839.33976071!2d-112.06352161464558!3d34.830951622580315!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x872da132f942b00d%3A0x5548c523fa6c8efd!2z0KHQtdC00L7QvdCwLCDQkNGA0LjQt9C-0L3QsCA4NjMzNiwg0KHQqNCQ!5e0!3m2!1sru!2sru!4v1490832494199" width="320" height="350" frameborder="0" style="border:0" allowfullscreen></iframe>
+      </div>
     </div>
     <footer class="main-footer">
       <div class="main-footer__wrap">
@@ -149,5 +151,6 @@
         </div>
       </div>
     </footer>
+    <script type="text/javascript" src="js/navigation.js"></script>
   </body>
 </html>
