--- a/form.html
+++ b/form.html
@@ -51,7 +51,7 @@
             <div class="person__label-wrap">
               <label class="person__label">
                 <span class="person__label-text">Имя*:</span>
-                <input class="person__input" type="text" placeholder="Петр" name="name-first">
+                <input class="person__input person__input" type="text" placeholder="Петр" name="name-first">
               </label>
               <label class="person__label">
                 <span class="person__label-text">Фамилия*:</span>
