--- a/index.html
+++ b/index.html
@@ -64,14 +64,17 @@
         </div>
         <div class="features-place__entertainment">
         <div class="features-place__entertainment-item-layout">
+          <img class="features-place__entertainment-item-icon" src="img/icon-house.svg" alt="Жилье" width="39" height="37">
           <h3 class="features-place__entertainment-item-title">Жилье</h3>
           <p class="features-place__entertainment-item-about">Рекомендуем пожить в настоящем мотеле, все как в кино!</p>
         </div>
         <div class="features-place__entertainment-item-layout">
+          <img class="features-place__entertainment-item-icon" src="img/icon-gift.svg" alt="Жилье" width="32" height="38">
           <h3 class="features-place__entertainment-item-title">Сувениры</h3>
-          <p class="features-place__entertainment-item-about">Не только китайcкого, но и местного производства!</p>
+          <p class="features-place__entertainment-item-about"><span class="features-place__entertainment-item-about--break">Не только китайcкого, </span>но и местного производства!</p>
         </div>
         <div class="features-place__entertainment-item-layout">
+          <img class="features-place__entertainment-item-icon" src="img/icon-burger.svg" alt="Жилье" width="40" height="35">
           <h3 class="features-place__entertainment-item-title">Еда</h3>
           <p class="features-place__entertainment-item-about">Всегда заказывайте фирменный бургер, вы не разочаруетесь!</p>
         </div>
@@ -118,7 +121,7 @@
     <section class="location">
       <div class="location__wrap">
         <h2 class="location__title">Заинтересовались?</h2>
-        <p class="location__about">Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в седоне</p>
+        <p class="location__about"><span class="location__about-break">Укажите предполагаемые даты поездки, </span>и мы покажем вам лучшие предложения гостиниц в седоне</p>
         <a class="location__button" href="http://examplepage.com">Найти гостиницу</a>
       </div>
     </section>
