final task chenge

--- a/form.html
+++ b/form.html
@@ -71,15 +71,15 @@
               <div class="contact-inf__label-wrap">
                 <label class="contact-inf__label">
                   <span class="contact-inf__label-text"><span class="contact-inf__label-text-hidden">Контактный</span> телефон*:</span>
-                  <div class="contact-inf__input-wrap">
+                  <span class="contact-inf__input-wrap">
                     <input class="contact-inf__input" type="text" placeholder="Введите телефон" name="tel">
-                  </div>
+                  </span>
                 </label>
                 <label class="contact-inf__label">
                   <span class="contact-inf__label-text">Электронная почта*:</span>
-                  <div class="contact-inf__input-wrap">
+                  <span class="contact-inf__input-wrap">
                     <input class="contact-inf__input" type="email" placeholder="Введите e-mail" name="email">
-                  </div>
+                  </span>
                 </label>
               </div>
             </div>
